--- a/Core Java/九.集合.md
+++ b/Core Java/九.集合.md
@@ -1,3 +1,7 @@
+
+
+
+
 # 九.集合
 
 ## 9.1 Java集合框架
@@ -109,6 +113,8 @@
 
 ### 9.2.1 链表
 
+#### 1.LinkedList
+
 - 结构：双向链表
 
   - 每个结点存放着数据以及上一结点和下一结点的引用
@@ -116,12 +122,181 @@
   - 结构图
 
     ![](/Users/space/Documents/Package/Note/Core Java/assets/9.2.1链表的结构.png)
+    
+  - 实现原理
 
-- API
+    <!--源码-->
+
+    ```java
+    // 结点的Node内部类
+    private static class Node<E> {
+        E item;
+        Node<E> next;
+        Node<E> prev;
+        Node(Node<E> prev, E element, Node<E> next) {
+            this.item = element;
+            this.next = next;
+            this.prev = prev;
+        }
+    }
+    ```
+
+    <!--解析-->
+
+    1. 链表的节点使用Node内部类实现
+    2. 当前节点的前后节点会在当前节点中的内部类中进行赋值，来实现双向链表。实在是精妙之极，令人赞叹
+
+- 特点
+
+  - 同时实现了List接口和Deque接口
+  - 非线程安全，不同步 <!--如果需要实现同步，通过Collections.synchronizedList()方法对其进行包装-->
+  
+- 方法
+
+  - add()
 
   - add(int i , E element)：特定位置添加元素
+
+    <!--源码-->
+
+    1.add方法
+
+    ```java
+    public void add(int index, E element) {
+            checkPositionIndex(index);
+    
+            if (index == size)
+                linkLast(element);
+            else
+                linkBefore(element, node(index));
+        }
+    ```
+
+    2.linkLast——调用的方法
+
+    ```java
+    // 把新节点加入到末尾的方法
+    void linkLast(E e) {
+            final Node<E> l = last;
+            final Node<E> newNode = new Node<>(l, e, null); // node构造方法：Node(Node<E> prev, E element, Node<E> next)
+            last = newNode;
+            if (l == null)
+                first = newNode; //如果前一节点为空，则新节点为首个节点
+            else
+                l.next = newNode; //如果前节点不为空，则前一节点的next值为新节点的引用
+            size++;
+            modCount++;
+        }
+    ```
+
+    3.linkBefore——调用的方法
+
+    ```java
+    void linkBefore(E e, Node<E> succ) {
+            // assert succ != null;
+            final Node<E> pred = succ.prev; //获取被添加位置的节点的“前一个节点的引用”，赋值给添加的元素中node类的前一个结点引用的属性
+            final Node<E> newNode = new Node<>(pred, e, succ); // 新节点构造
+            succ.prev = newNode; // 被添加后，后一个元素的前一个节点引用属性修改为添加的元素的引用
+            if (pred == null)
+                first = newNode;
+            else
+                pred.next = newNode;// 被添加后，前一个元素的后一个节点引用属性修改为添加的元素的引用
+            size++;
+            modCount++;
+        }
+    ```
+
+    4.node(index)——调用的方法作为传参
+
+    ```java
+    Node<E> node(int index) {
+            // assert isElementIndex(index);
+            if (index < (size >> 1)) {
+                Node<E> x = first;
+                for (int i = 0; i < index; i++)
+                    x = x.next;
+                return x;
+            } else {
+                Node<E> x = last;
+                for (int i = size - 1; i > index; i--)
+                    x = x.prev;
+                return x;
+            }
+        }
+    ```
+
+    <!--解析-->
+
+    1. node(int index)函数，因为链表双向的，可以从开始往后找，也可以从结尾往前找，具体朝那个方向找取决于条件index < (size >> 1)，也即是index是靠近前端还是后端。
+
+       <!--比如10个元素，在第2个元素位置插入元素，则将从前往后找，找到第二个元素并传值到linkBefore方法中-->
+
+  - remove(int index)：删除指定位置元素
+
+  - remove(Object o)：删除指定元素（通过equals方法判断）
+
+    <!--源码-->
+
+    ```java
+    public boolean remove(Object o) {
+            if (o == null) { // 如果为空，则将后面的元素向前移动
+                for (Node<E> x = first; x != null; x = x.next) { 
+                    if (x.item == null) {
+                        unlink(x);
+                        return true;
+                    }
+                }
+            } else {
+                for (Node<E> x = first; x != null; x = x.next) {
+                    if (o.equals(x.item)) {
+                        unlink(x);
+                        return true;
+                    }
+                }
+            }
+            return false;
+        }
+    ```
+
+    <!--解析-->
+
+    1. 通过equals方法找到需要删除的元素
+
+  - get(int index)：获得指定元素
+
+    <!--源码-->
+
+    ```java
+    public E get(int index) {
+            checkElementIndex(index);
+            return node(index).item;
+        }
+    ```
+
   - set(int i , E element)：特定位置新元素替代旧元素
-  - remove(int i)：删除指定位置元素
+
+    <!--源码-->
+
+    ```java
+    public E set(int index, E element) {
+            checkElementIndex(index);
+            Node<E> x = node(index);
+            E oldVal = x.item; // 将原对象中的值赋值给oldVal变量
+            x.item = element;
+            return oldVal;
+        }
+    ```
+
+    <!--解析-->
+
+    1. 将新node对象指向原引用指向的对象，再修改值才能生效
+    2. 问题：为什么要返回oldVal，为什么不返回true或者false default
+
+#### 2.迭代器
+
+- 特点
+
+  - 存在失效的情况。<!--如果数组重新分配空间，则之前生成的迭代器将失效-->
 
 - 迭代器定位以及add/remove方法
 
@@ -141,12 +316,13 @@
 
 #### 1.ArrayList
 
-- ArrayList 定义：实现了List接口，是顺序容器（元素存放的顺序与放进去的顺序一致），允许放入null，底层通过数组实现
+- 特点
 
-- 注意
-
-  - 线程不安全
+  - 实现了List接口
+  - 非线程安全
+  - 顺序容器（元素存放的顺序与放进去的顺序一致），因为底层是数组
   - 容量不足，容器会自动增大底层数组的大小
+  - 允许元素为null
 
 - 方法
 
@@ -161,12 +337,160 @@
             elementData[index] = element; // 将数组中指定位置的值更新成新值
             return oldValue; // 返回旧值
         }
-    /*
-    1.底层实现是数组，同时无法对在数组外的位置赋值
-    */
     ```
-
+  
+    <!--解析-->
+  
+  1. 底层实现是数组，同时无法对在数组外的位置赋值
+  
+- get( )：获取指定位置的元素
+  
+  <!--源码-->
+  
+    ```java
+    public E get(int index) {
+            Objects.checkIndex(index, size); // 越界检查
+            return elementData(index);
+        }
+  ```
+  
+  - add( )：向指定位置添加元素
+  
+    <!--源码-->
+  
+    ```java
+    // 增加的方法
+    public void add(int index, E element) {
+            rangeCheckForAdd(index); // 是否超过数组大小
+            modCount++; // 记录结构性改变的次数
+            final int s;
+            Object[] elementData;
+            if ((s = size) == (elementData = this.elementData).length)
+                elementData = grow();
+            System.arraycopy(elementData, index,
+                             elementData, index + 1,
+                             s - index);
+            elementData[index] = element;
+            size = s + 1;
+        }
+    ```
+  
+    ```java
+    // 执行add方法前，执行的grow，先增加容量，确保能放入当前添加元素
+    private Object[] grow() {
+            return grow(size + 1);
+        }
+    // 执行add方法前，调用newCapacity方法，如果空间不足则扩容
+    private int newCapacity(int minCapacity) {
+            // overflow-conscious code
+            int oldCapacity = elementData.length;
+            int newCapacity = oldCapacity + (oldCapacity >> 1); // 原来的1.5倍
+            if (newCapacity - minCapacity <= 0) {
+                if (elementData == DEFAULTCAPACITY_EMPTY_ELEMENTDATA)
+                    return Math.max(DEFAULT_CAPACITY, minCapacity);
+                if (minCapacity < 0) // overflow
+                    throw new OutOfMemoryError();
+                return minCapacity;
+            }
+            return (newCapacity - MAX_ARRAY_SIZE <= 0)
+                ? newCapacity
+                : hugeCapacity(minCapacity);
+        }
+    ```
+  
+    <!--解析-->
+  
+    1. **modCount的作用是保证安全。ArrayList中的add、remove等方法中，会修改modCount的值，而迭代器是单独线程，运行过程中会检查modCount是否被修改，如果迭代器使用过程中，有其他线程进行了remove、add等操作（也就是修改了modCount值），则将抛出异常ConcurrentModificationException，这就是fail-fast策略。**
+  
+       **如下，是迭代器的remove源码，在迭代器使用过程中会检查"modCount != expectedModCount"，这时如果其他线程进行了结构性修改，则会报错。——重点**
+  
+       ```java
+       public void remove() {
+                   if (current == null)
+                       throw new IllegalStateException();
+                   if (modCount != expectedModCount) // 检查是否在迭代器使用过程中，有其他线程进行结构性修改
+                       throw new ConcurrentModificationException();
+                   Object k = current.key;
+                   current = null;
+                   HashMap.this.removeEntryForKey(k);
+                   expectedModCount = modCount;
+               }
+       ```
+  
+       <!--错误演示-->
+  
+       ```java
+       List<String> list = new ArrayList<>();
+               list.add("A");
+               list.add("B");
+               list.add("C");
+               list.add("D");
+       
+               for (String s : list) {
+                   if (s.equals("B"))
+                       list.remove(s); // 在迭代器运行过程中，进行结构性修改后，报错
+               }
+       /* output
+       Exception in thread "main" java.util.ConcurrentModificationException
+       */
+       ```
+  
+       <!--正确演示-->
+  
+       ```java
+       List<String> list = new ArrayList<>();
+               list.add("A");
+               list.add("B");
+               list.add("C");
+               list.add("D");
+               Iterator<String> iterator = list.iterator();
+               while (iterator.hasNext()){
+                   if (iterator.next().equals("B")){
+                       iterator.remove();
+                   }
+               }
+               for (String s : list) {
+                   System.out.println(s);
+               }
+       /* output
+       A
+       C
+       D
+       */
+       ```
+  
+       
+  
+    2. newCapacity执行后，会将原数组复制到新数组，然后再执行add方法
+  
+  - remove( )：删除元素
+  
+    <!--源码-->
+  
+    ```java
+    // 删除的方法
+    public E remove(int index) {
+            Objects.checkIndex(index, size);
+            final Object[] es = elementData;
     
+            @SuppressWarnings("unchecked") E oldValue = (E) es[index];
+            fastRemove(es, index);
+    
+            return oldValue;
+        }
+    // 被删除调用的方法，真正执行删除操作的方法
+    private void fastRemove(Object[] es, int i) {
+            modCount++;
+            final int newSize;
+            if ((newSize = size - 1) > i)
+                System.arraycopy(es, i + 1, es, i, newSize - i);
+            es[size = newSize] = null;
+        }
+    ```
+  
+    <!--解析-->
+  
+    1. fastRemove方法中，因为被删除元素后的元素都向前移动一个位置，因此最后的元素需要赋值为null，让GC进行回收处理
 
 #### 2.ArrayList与Vector区别
 
@@ -286,6 +610,104 @@
 - 规则
   - 支持在头部和尾部同时添加或删除元素
   - 不支持在队列中间添加元素
+
+#### 1.ArrayDeque
+
+- 特点
+
+  - 双端队列，可以作为栈使用，也能作为队列使用
+
+  - 底层为数组实现，并且为循环数组（以实现同时在头部和尾部插入元素）
+
+    <!--源码-->
+
+    ```java
+     // 构造方法
+     public ArrayDeque() {
+            elements = new Object[16 + 1];
+        }
+    ```
+
+  - 非线程安全
+
+  - 不能插入null值
+
+  - 迭代器不能使用add方法
+
+- 方法
+
+  - add( )：添加元素
+
+    <!--源码-->
+
+    1.add方法
+
+    ```java
+    public boolean add(E e) {
+            addLast(e);
+            return true;
+        }
+    ```
+
+    2.addLast方法——调用的方法
+
+    ```java
+    public void addLast(E e) {
+            if (e == null) // 不允许放入null
+                throw new NullPointerException();
+            final Object[] es = elements;
+            es[tail] = e; // 赋值
+            if (head == (tail = inc(tail, es.length)))
+                grow(1); // 扩容
+        }
+    ```
+
+  - pollFirst()：删除并返回队首的元素
+
+    <!--源码-->
+
+    1.pollFirst
+
+    ```java
+     public E pollFirst() {
+            final Object[] es;
+            final int h;
+            E e = elementAt(es = elements, h = head);  // 获取到头部的元素
+            if (e != null) {
+                es[h] = null;  // 让GC工作
+                head = inc(h, es.length);
+            }
+            return e;
+        }
+    ```
+
+    2.elementAt——调用的方法
+
+    ```java
+    static final <E> E elementAt(Object[] es, int i) {
+            return (E) es[i];
+        }
+    ```
+
+  - peekFirst( )：返回队首的元素
+
+    <!--源码-->
+
+    1.peekFirst
+
+    ```java
+    public E peekFirst() {
+            return elementAt(elements, head);
+        }
+    ```
+
+    2.elementAt——调用的方法
+
+    ```java
+    static final <E> E elementAt(Object[] es, int i) {
+            return (E) es[i];
+        }
+    ```
 
 ### 9.2.6 优先级队列
 
