--- a/Core Java/五.继承.md
+++ b/Core Java/五.继承.md
@@ -427,7 +427,7 @@
   
     <!--运行过程中，以下出现的方法属于Class类对象中的methods对象中的内容-->
   
-    ![](/Users/space/Documents/Package/Note/Core Java/assets/屏幕快照 2019-08-06 20.40.32.png)
+    ![](/Users/space/Documents/Package/Note/Core Java/assets/1.png)
   
   - 实现通用的数组操作代码
   
