--- a/Core Java/九.集合.md
+++ b/Core Java/九.集合.md
@@ -41,6 +41,12 @@
 
 ### 9.1.3 迭代器
 
+- 特点
+
+  - 所有Collection类(List、Set、Deque)们都可以使用的迭代器
+  - 支持三种操作：hasNext()、next()、remove()
+  - 存在失效的情况。<!--如果数组重新分配空间，则之前生成的迭代器将失效-->
+  
 - 方法
 
   ```java
@@ -115,6 +121,11 @@
 
 #### 1.LinkedList
 
+- 特点
+
+  - 同时实现了List接口和Deque接口
+  - 非线程安全，不同步 <!--如果需要实现同步，通过Collections.synchronizedList()方法对其进行包装-->
+
 - 结构：双向链表
 
   - 每个结点存放着数据以及上一结点和下一结点的引用
@@ -146,11 +157,6 @@
     1. 链表的节点使用Node内部类实现
     2. 当前节点的前后节点会在当前节点中的内部类中进行赋值，来实现双向链表。实在是精妙之极，令人赞叹
 
-- 特点
-
-  - 同时实现了List接口和Deque接口
-  - 非线程安全，不同步 <!--如果需要实现同步，通过Collections.synchronizedList()方法对其进行包装-->
-  
 - 方法
 
   - add()
@@ -292,15 +298,14 @@
     1. 将新node对象指向原引用指向的对象，再修改值才能生效
     2. 问题：为什么要返回oldVal，为什么不返回true或者false default
 
-#### 2.迭代器
+#### 2.ListIterator
 
 - 特点
 
-  - 存在失效的情况。<!--如果数组重新分配空间，则之前生成的迭代器将失效-->
-
+  - 只有List类能够使用
+- 相比于Iterator增加了部分功能
+  
 - 迭代器定位以及add/remove方法
-
-  - 迭代器同样存在add，set，remove方法
 
   - **add方法只依赖迭代器的位置；remove,set方法依赖迭代器的状态**
 
@@ -631,8 +636,6 @@
   - 非线程安全
 
   - 不能插入null值
-
-  - 迭代器不能使用add方法
 
 - 方法
 
