--- a/Core Java/九.集合.md
+++ b/Core Java/九.集合.md
@@ -94,7 +94,7 @@
 
 ### 9.1.5 集合框架中的接口
 
-- 集合基本接口：Collection和Map
+- **集合基本接口：Collection和Map** <!--因此HashMap属于集合-->
 
 ## 9.2 具体的集合
 
@@ -357,7 +357,7 @@
             Objects.checkIndex(index, size); // 越界检查
             return elementData(index);
         }
-  ```
+    ```
   
   - add( )：向指定位置添加元素
   
@@ -536,6 +536,10 @@
   > **5、随机数法**
   >
   > **6、除留余数法：**取关键字被某个不大于散列表表长m的数p除后所得的余数为散列地址，即hash(k) = k mod p, p <= m。不仅可以对关键字直接取模，也可在折叠法、平方取中法等运算之后取模。对p的选择很重要，一般取素数或m，若p选择不好，容易产生冲突。
+
+#### 1.HashSet
+
+- HashSet里面有一个HashMap（适配器模式）
 
 ### 9.2.4 树集
 
@@ -721,6 +725,398 @@
   - 支持任意顺序插入，按照排序的顺序检索，但并未对所有元素排序 
 
     <!--调用remove方法，总会获得队列中最小的元素-->
+
+#### 1.PriorityQueue ——
+
+### 9.2.7 Map类集合
+
+#### 1.TreeMap以及红黑树——default 数据结构
+
+#### 2.HashMap
+
+- 特点
+
+  - 使用冲突链表方式
+  - 元素顺序不保证
+  - 允许放入null元素
+  - 不同步
+
+- 结构
+
+  HashMap使用链表法避免哈希冲突（相同hash值），当链表长度大于TREEIFY_THRESHOLD（默认为8）时，将链表转换为红黑树，当然小于UNTREEIFY_THRESHOLD（默认为6）时，又会转回链表以达到性能均衡
+
+  <!--结构图-->
+
+  ![](/Users/space/Documents/Package/Note/Core Java/assets/HashMap结构图.png)
+
+- 构造方法
+
+  > 详解：https://tech.meituan.com/2016/06/24/java-hashmap.html
+
+  1. 无参构造器
+
+     <!--源码-->
+  
+     ```java
+     public HashMap() {
+             this.loadFactor = DEFAULT_LOAD_FACTOR; // all other fields defaulted
+       }
+     ```
+
+     <!--解析-->
+
+     1. 构造器中对装填因子进行初始化赋值
+
+  2. 有参构造器1
+
+     <!--源码-->
+  
+     ```java
+     public HashMap(int initialCapacity) {
+             this(initialCapacity, DEFAULT_LOAD_FACTOR);
+       }
+     ```
+
+     <!--解析-->
+
+     1. 对初识容量和装填因子进行赋值，调用了另一个构造器
+
+  3. 有参构造器2
+
+     <!--源码-->
+
+     1.构造器
+  
+     ```java
+     public HashMap(int initialCapacity, float loadFactor) {
+             if (initialCapacity < 0)
+                 throw new IllegalArgumentException("Illegal initial capacity: " +
+                                                    initialCapacity);
+             if (initialCapacity > MAXIMUM_CAPACITY)
+                 initialCapacity = MAXIMUM_CAPACITY;
+             if (loadFactor <= 0 || Float.isNaN(loadFactor))
+                 throw new IllegalArgumentException("Illegal load factor: " +
+                                                    loadFactor);
+             this.loadFactor = loadFactor;
+             this.threshold = tableSizeFor(initialCapacity);
+       }
+     ```
+
+     2.tableSizeFor——构造器调用的方法
+  
+     ```java
+     static final int tableSizeFor(int cap) {
+             int n = -1 >>> Integer.numberOfLeadingZeros(cap - 1);
+             return (n < 0) ? 1 : (n >= MAXIMUM_CAPACITY) ? MAXIMUM_CAPACITY : n + 1;
+       		// 如果n小于零，则返回1；如果n大于设定的最大容量，则返回最大容量，否则返回n+1的大小
+       }
+     ```
+
+     3.numberOfLeadingZeros——tableSizeFor调用的方法
+  
+     ```java
+     public static int numberOfLeadingZeros(int i) {
+             // HD, Count leading 0's
+             if (i <= 0)
+                 return i == 0 ? 32 : 0;
+             int n = 31;
+             if (i >= 1 << 16) { n -= 16; i >>>= 16; }
+             if (i >= 1 <<  8) { n -=  8; i >>>=  8; }
+             if (i >= 1 <<  4) { n -=  4; i >>>=  4; }
+             if (i >= 1 <<  2) { n -=  2; i >>>=  2; }
+             return n - (i >>> 1);
+       }
+     ```
+
+     <!--解析-->
+
+     1. 构造器中流程为：首先判断设定的初始容量是否小于零，然后判断是否大于设定的最大容量值，再判断装填因子是否合法。最后给装填因子赋值，如果容量等于threshold，则对容器进行扩容
+
+     2. 扩容时，调用Integer的 numberOfLeadingZeros方法，返回一个比给定整数大且最接近的2的幂次方整数
+
+        <!--比如传的参数为10，则返回16，因为2的4次方是大于10且最接近10的一个2的幂次方整数-->
+
+        <!--运算过程如下-->
+
+        ![](/Users/space/Documents/Package/Note/Core Java/assets/9.2位移运算符.png)
+
+        
+
+  4. 有参构造器3
+
+     <!--源码-->
+
+     0.成员变量
+  
+     ```java
+     /**
+          * The table, initialized on first use, and resized as
+          * necessary. When allocated, length is always a power of two.
+          * (We also tolerate length zero in some operations to allow
+          * bootstrapping mechanics that are currently not needed.)
+          */
+         //实际存储key，value的数组，只不过key，value被封装成Node了
+         transient Node<K,V>[] table;
+     
+         /**
+          * The number of key-value mappings contained in this map.
+          */
+         transient int size;
+     
+         /**
+          * The number of times this HashMap has been structurally modified
+          * Structural modifications are those that change the number of mappings in
+          * the HashMap or otherwise modify its internal structure (e.g.,
+          * rehash).  This field is used to make iterators on Collection-views of
+          * the HashMap fail-fast.  (See ConcurrentModificationException).
+          */
+     	 // 记录结构性修改次数
+         transient int modCount;
+     
+         /**
+          * The next size value at which to resize (capacity * load factor).
+          *
+          * @serial
+          */
+         // (The javadoc description is true upon serialization.
+         // Additionally, if the table array has not been allocated, this
+         // field holds the initial array capacity, or zero signifying
+         // DEFAULT_INITIAL_CAPACITY.)
+         //因为 tableSizeFor(int) 返回值给了threshold
+         int threshold;
+     
+         /**
+          * The load factor for the hash table.
+          *
+          * @serial
+          */
+       final float loadFactor;
+     ```
+
+     1.构造器
+  
+     ```java
+     public HashMap(Map<? extends K, ? extends V> m) {
+             this.loadFactor = DEFAULT_LOAD_FACTOR;
+             putMapEntries(m, false);
+       }
+     ```
+
+     2.putMapEntries——构造器调用
+  
+     ```java
+     final void putMapEntries(Map<? extends K, ? extends V> m, boolean evict) {
+             int s = m.size(); // 获取集合的大小
+             if (s > 0) { // s大于零，说明m不为空，则将map中的元素放入HashMap实例中
+                 if (table == null) { // pre-size 判断table是否初始化
+                     // 根据集合m的大小，确定HashMap初始化大小
+                     float ft = ((float)s / loadFactor) + 1.0F;
+                     int t = ((ft < (float)MAXIMUM_CAPACITY) ?
+                              (int)ft : MAXIMUM_CAPACITY);
+                     if (t > threshold)
+                         // 把需要创建的HashMap大小存储在threshold中
+                         threshold = tableSizeFor(t);
+                 }
+                 // 如果m的size大于threshold，则需要进行扩容
+                 else if (s > threshold)
+                     resize();
+                 // 遍历m，并把<K,V>插入到HashMap实例中
+                 for (Map.Entry<? extends K, ? extends V> e : m.entrySet()) {
+                     K key = e.getKey();
+                     V value = e.getValue();
+                     // 调用putVal方法进行插入
+                     putVal(hash(key), key, value, false, evict);
+                 }
+             }
+       }
+     ```
+
+     3.resize——putVal调用
+  
+     ```java
+     final Node<K,V>[] resize() {
+             // 保存当前table
+             Node<K,V>[] oldTab = table;
+             // 保存当前table的容量
+             int oldCap = (oldTab == null) ? 0 : oldTab.length;
+             // 保存当前阈值
+             int oldThr = threshold;
+             // 初始化新的table容量和阈值 
+             int newCap, newThr = 0;
+             /*
+             1. resize（）函数在size　> threshold时被调用。oldCap大于 0 代表原来的 table 表非空，
+                oldCap 为原表的大小，oldThr（threshold） 为 oldCap × load_factor
+             */
+             if (oldCap > 0) {
+                 // 若旧table容量已超过最大容量，更新阈值为Integer.MAX_VALUE（最大整形值），这样以后就不会自动扩容了。
+                 if (oldCap >= MAXIMUM_CAPACITY) {
+                     threshold = Integer.MAX_VALUE;
+                     return oldTab;
+                 }
+                  // 容量翻倍，使用左移，效率更高
+                 else if ((newCap = oldCap << 1) < MAXIMUM_CAPACITY &&
+                          oldCap >= DEFAULT_INITIAL_CAPACITY)
+                     // 阈值翻倍
+                     newThr = oldThr << 1; // double threshold
+             }
+             /*
+             2. resize（）函数在table为空被调用。oldCap 小于等于 0 且 oldThr 大于0，代表用户创建了一个 HashMap，但是使用的构造函数为      
+                HashMap(int initialCapacity, float loadFactor) 或 HashMap(int initialCapacity)
+                或 HashMap(Map<? extends K, ? extends V> m)，导致 oldTab 为 null，oldCap 为0， oldThr 为用户指定的 HashMap的初始容量。
+         　　*/
+             else if (oldThr > 0) // initial capacity was placed in threshold
+                 //当table没初始化时，threshold持有初始容量。还记得threshold = tableSizeFor(t)么;
+                 newCap = oldThr;
+             /*
+             3. resize（）函数在table为空被调用。oldCap 小于等于 0 且 oldThr 等于0，用户调用 HashMap()构造函数创建的　HashMap，所有值均采用默认值，oldTab（Table）表为空，oldCap为0，oldThr等于0，
+             */
+             else {               // zero initial threshold signifies using defaults
+                 newCap = DEFAULT_INITIAL_CAPACITY;
+                 newThr = (int)(DEFAULT_LOAD_FACTOR * DEFAULT_INITIAL_CAPACITY);
+             }
+             // 新阈值为0
+             if (newThr == 0) {
+                 float ft = (float)newCap * loadFactor;
+                 newThr = (newCap < MAXIMUM_CAPACITY && ft < (float)MAXIMUM_CAPACITY ?
+                           (int)ft : Integer.MAX_VALUE);
+             }
+             threshold = newThr;
+             @SuppressWarnings({"rawtypes","unchecked"})
+             // 初始化table
+             Node<K,V>[] newTab = (Node<K,V>[])new Node[newCap];
+             table = newTab;
+             if (oldTab != null) {
+                 // 把 oldTab 中的节点　reHash 到　newTab 中去
+                 for (int j = 0; j < oldCap; ++j) {
+                     Node<K,V> e;
+                     if ((e = oldTab[j]) != null) {
+                         oldTab[j] = null;
+                         // 若节点是单个节点，直接在 newTab　中进行重定位
+                         if (e.next == null)
+                             newTab[e.hash & (newCap - 1)] = e;
+                         // 若节点是　TreeNode 节点，要进行 红黑树的 rehash　操作
+                         else if (e instanceof TreeNode)
+                             ((TreeNode<K,V>)e).split(this, newTab, j, oldCap);
+                         // 若是链表，进行链表的 rehash　操作
+                         else { // preserve order
+                             Node<K,V> loHead = null, loTail = null;
+                             Node<K,V> hiHead = null, hiTail = null;
+                             Node<K,V> next;
+                             // 将同一桶中的元素根据(e.hash & oldCap)是否为0进行分割（代码后有图解，可以回过头再来看），分成两个不同的链表，完成rehash
+                             do {
+                                 next = e.next;
+                                 // 根据算法　e.hash & oldCap 判断节点位置rehash　后是否发生改变
+                               //最高位==0，这是索引不变的链表。
+                                 if ((e.hash & oldCap) == 0) { 
+                                if (loTail == null)
+                                         loHead = e;
+                                  else
+                                         loTail.next = e;
+                                     loTail = e;
+                                 }
+                                 //最高位==1 （这是索引发生改变的链表）
+                                 else {  
+                                     if (hiTail == null)
+                                         hiHead = e;
+                                     else
+                                         hiTail.next = e;
+                                   hiTail = e;
+                                 }
+                        } while ((e = next) != null);
+                             if (loTail != null) {  // 原bucket位置的尾指针不为空(即还有node)  
+                              loTail.next = null; // 链表最后得有个null
+                                 newTab[j] = loHead; // 链表头指针放在新桶的相同下标(j)处
+                             }
+                             if (hiTail != null) {
+                                 hiTail.next = null;
+                                 // rehash　后节点新的位置一定为原来基础上加上　oldCap，具体解释看下图
+                                 newTab[j + oldCap] = hiHead;
+                             }
+                         }
+                     }
+                 }
+             }
+             return newTab;
+         }
+     }
+     ```
+     
+     4.hash(key)——putVal调用
+     
+     ```java
+     static final int hash(Object key) {
+             int h;
+             return (key == null) ? 0 : (h = key.hashCode()) ^ (h >>> 16);
+         }
+     /*
+     key 的 hash值的计算是通过hashCode()的高16位异或低16位实现的：(h = k.hashCode()) ^ (h >>> 16)
+     主要是从速度、功效、质量来考虑的，这么做可以在数组table的length比较小的时候
+     也能保证考虑到高低Bit都参与到Hash的计算中，同时不会有太大的开销。掺杂的元素多了，那么生成的hash值的随机性会增大。
+     */   
+     ```
+     
+     5.putVal——putMapEntries调用
+     
+     ```java
+     //实现put和相关方法。
+         final V putVal(int hash, K key, V value, boolean onlyIfAbsent,
+                        boolean evict) {
+             Node<K,V>[] tab; Node<K,V> p; int n, i;
+             //如果table为空或者长度为0，则resize()
+             if ((tab = table) == null || (n = tab.length) == 0)
+                 n = (tab = resize()).length;
+             //确定插入table的位置，算法是(n - 1) & hash，在n为2的幂时，相当于取模操作。
+             ////找到key值对应的槽并且是第一个，直接加入
+           if ((p = tab[i = (n - 1) & hash]) == null)
+                 tab[i] = newNode(hash, key, value, null);
+          //在table的i位置发生碰撞，有两种情况，1、key值是一样的，替换value值，
+             //2、key值不一样的有两种处理方式：2.1、存储在i位置的链表；2.2、存储在红黑树中
+             else {
+                 Node<K,V> e; K k;
+                 //第一个node的hash值即为要加入元素的hash
+                 if (p.hash == hash &&
+                     ((k = p.key) == key || (key != null && key.equals(k))))
+                     e = p;
+                 //2.2
+                 else if (p instanceof TreeNode)
+                     e = ((TreeNode<K,V>)p).putTreeVal(this, tab, hash, key, value);
+                 //2.1
+                 else {
+                     //不是TreeNode,即为链表,遍历链表
+                     for (int binCount = 0; ; ++binCount) {
+                     ///链表的尾端也没有找到key值相同的节点，则生成一个新的Node,
+                     //并且判断链表的节点个数是不是到达转换成红黑树的上界达到，则转换成红黑树。
+                         if ((e = p.next) == null) {
+                              // 创建链表节点并插入尾部
+                             p.next = newNode(hash, key, value, null);
+                             ////超过了链表的设置长度8就转换成红黑树
+                             if (binCount >= TREEIFY_THRESHOLD - 1) // -1 for 1st
+                                 treeifyBin(tab, hash);
+                             break;
+                         }
+                         if (e.hash == hash &&
+                             ((k = e.key) == key || (key != null && key.equals(k))))
+                             break;
+                         p = e;
+                     }
+                 }
+                 //如果e不为空就替换旧的oldValue值
+                 if (e != null) { // existing mapping for key
+                     V oldValue = e.value;
+                     if (!onlyIfAbsent || oldValue == null)
+                         e.value = value;
+                     afterNodeAccess(e);
+                     return oldValue;
+                 }
+             }
+             ++modCount;
+             if (++size > threshold)
+                 resize();
+             afterNodeInsertion(evict);
+             return null;
+         }
+     ```
+     
 
 ## 9.3 映射
 
